# bevy_bicycle

./: Cargo.toml  README.md
.cargo/: .config.toml
assets/shaders/: custom_material_2d.wgsl  terrain_fragment.wgsl  terrain_vertex.glsl
src/: lib.rs  main.rs
src/bicycle/: chain.rs  components.rs  events.rs  frame.rs  groupset.rs  mod.rs  plugin.rs  systems.rs  wheel.rs
src/bicycle/chain/: components.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/bicycle/groupset/: components.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/bicycle/sprocket/: components.rs  plugin.rs  systems.rs
src/bicycle/wheel/: components.rs  events.rs  plugin.rs  systems.rs
src/camera/: components.rs  events.rs  plugin.rs  systems.rs
src/ui/: mod.rs  plugin.rs  systems.rs
src/user_input/: plugin.rs  systems.rs
src/world/: components.rs  plugin.rs  resources.rs  systems.rs
