[package]
name = "bevy-bicycle"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { version = "0.2.0", default-features = false, features = [
  "2d",
  "f64",
  "parry-f64",
  "debug-plugin",
] }
bevy = { version = "0.15" }
bevy_ui = { version = "0.15", feature = ["bevy_ui_widgets"] }
bevy_egui = "0.31.1"
bevy-inspector-egui = "0.28"
bevy_dylib = "0.15.0"
bevy_sprite3d = "4.0"
itertools = "0.14.0"
noise = "0.9"
rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", branch = "main" }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
# bevy-parallax = {git = "https://github.com/Corrosive-Games/bevy-parallax.git"}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
